Add a book by Prof. Etheridge, suggested by Panqiu.

--- a/All.bib
+++ b/All.bib
@@ -2858,24 +2858,6 @@
 
 @Article{	  balan.tudor:10:stochastic,
   author	= {Balan, Raluca M. and Tudor, Ciprian A.},
-  title		= {Stochastic heat equation with multiplicative
-		  fractional-colored noise},
-  journal	= {J. Theoret. Probab.},
-  fjournal	= {Journal of Theoretical Probability},
-  volume	= {23},
-  year		= {2010},
-  number	= {3},
-  pages		= {834--870},
-  issn		= {0894-9840},
-  mrclass	= {60H15 (60G22 60H05)},
-  mrnumber	= {2679959},
-  mrreviewer	= {David Nualart},
-  doi		= {10.1007/s10959-009-0237-3},
-  url		= {https://doi.org/10.1007/s10959-009-0237-3}
-}
-
-@Article{	  balan.tudor:10:stochastic*1,
-  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
   title		= {The stochastic wave equation with fractional noise: a
 		  random field approach},
   journal	= {Stochastic Process. Appl.},
@@ -2890,6 +2872,24 @@
   mrreviewer	= {Llu\'{i}s Quer-Sardanyons},
   doi		= {10.1016/j.spa.2010.08.006},
   url		= {https://doi.org/10.1016/j.spa.2010.08.006}
+}
+
+@Article{	  balan.tudor:10:stochastic*1,
+  author	= {Balan, Raluca M. and Tudor, Ciprian A.},
+  title		= {Stochastic heat equation with multiplicative
+		  fractional-colored noise},
+  journal	= {J. Theoret. Probab.},
+  fjournal	= {Journal of Theoretical Probability},
+  volume	= {23},
+  year		= {2010},
+  number	= {3},
+  pages		= {834--870},
+  issn		= {0894-9840},
+  mrclass	= {60H15 (60G22 60H05)},
+  mrnumber	= {2679959},
+  mrreviewer	= {David Nualart},
+  doi		= {10.1007/s10959-009-0237-3},
+  url		= {https://doi.org/10.1007/s10959-009-0237-3}
 }
 
 @Article{	  balan.zamfirescu:06:strong,
@@ -14713,6 +14713,23 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -14728,23 +14745,6 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -14897,25 +14897,6 @@
   author	= {Dawson, Donald A. and Etheridge, Alison M. and
 		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
 		  and Xiong, Jie},
-  title		= {Mutually catalytic branching in the plane: infinite
-		  measure states},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {7},
-  year		= {2002},
-  pages		= {No. 15, 61},
-  issn		= {1083-6489},
-  mrclass	= {60K35 (60G57 60J80)},
-  mrnumber	= {1921744},
-  mrreviewer	= {Achim Klenke},
-  doi		= {10.1214/EJP.v7-114},
-  url		= {https://doi.org/10.1214/EJP.v7-114}
-}
-
-@Article{	  dawson.etheridge.ea:02:mutually*1,
-  author	= {Dawson, Donald A. and Etheridge, Alison M. and
-		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
-		  and Xiong, Jie},
   title		= {Mutually catalytic branching in the plane: finite measure
 		  states},
   journal	= {Ann. Probab.},
@@ -14930,6 +14911,25 @@
   mrreviewer	= {Roger Tribe},
   doi		= {10.1214/aop/1039548370},
   url		= {https://doi.org/10.1214/aop/1039548370}
+}
+
+@Article{	  dawson.etheridge.ea:02:mutually*1,
+  author	= {Dawson, Donald A. and Etheridge, Alison M. and
+		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
+		  and Xiong, Jie},
+  title		= {Mutually catalytic branching in the plane: infinite
+		  measure states},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {7},
+  year		= {2002},
+  pages		= {No. 15, 61},
+  issn		= {1083-6489},
+  mrclass	= {60K35 (60G57 60J80)},
+  mrnumber	= {1921744},
+  mrreviewer	= {Achim Klenke},
+  doi		= {10.1214/EJP.v7-114},
+  url		= {https://doi.org/10.1214/EJP.v7-114}
 }
 
 @Article{	  dawson.feng:01:large,
@@ -16729,21 +16729,6 @@
 
 @Book{		  dunford.schwartz:88:linear,
   author	= {Dunford, Nelson and Schwartz, Jacob T.},
-  title		= {Linear operators. {P}art {I}},
-  series	= {Wiley Classics Library},
-  note		= {General theory, With the assistance of William G. Bade and
-		  Robert G. Bartle, Reprint of the 1958 original, A
-		  Wiley-Interscience Publication},
-  publisher	= {John Wiley \& Sons, Inc., New York},
-  year		= {1988},
-  pages		= {xiv+858},
-  isbn		= {0-471-60848-3},
-  mrclass	= {47-01 (46-01)},
-  mrnumber	= {1009162}
-}
-
-@Book{		  dunford.schwartz:88:linear*1,
-  author	= {Dunford, Nelson and Schwartz, Jacob T.},
   title		= {Linear operators. {P}art {II}},
   series	= {Wiley Classics Library},
   note		= {Spectral theory. Selfadjoint operators in Hilbert space,
@@ -16756,6 +16741,21 @@
   isbn		= {0-471-60847-5},
   mrclass	= {47-01 (46-01)},
   mrnumber	= {1009163}
+}
+
+@Book{		  dunford.schwartz:88:linear*1,
+  author	= {Dunford, Nelson and Schwartz, Jacob T.},
+  title		= {Linear operators. {P}art {I}},
+  series	= {Wiley Classics Library},
+  note		= {General theory, With the assistance of William G. Bade and
+		  Robert G. Bartle, Reprint of the 1958 original, A
+		  Wiley-Interscience Publication},
+  publisher	= {John Wiley \& Sons, Inc., New York},
+  year		= {1988},
+  pages		= {xiv+858},
+  isbn		= {0-471-60848-3},
+  mrclass	= {47-01 (46-01)},
+  mrnumber	= {1009162}
 }
 
 @Article{	  dunlap.gu.ea:20:fluctuations,
@@ -18253,6 +18253,25 @@
   mrreviewer	= {Luis G. Gorostiza},
   doi		= {10.1090/ulect/020},
   url		= {https://doi.org/10.1090/ulect/020}
+}
+
+@Book{		  etheridge:11:some,
+  author	= {Etheridge, Alison},
+  title		= {Some mathematical models from population genetics},
+  series	= {Lecture Notes in Mathematics},
+  volume	= {2012},
+  note		= {Lectures from the 39th Probability Summer School held in
+		  Saint-Flour, 2009, \'{E}cole d'\'{E}t\'{e} de
+		  Probabilit\'{e}s de Saint-Flour. [Saint-Flour Probability
+		  Summer School]},
+  publisher	= {Springer, Heidelberg},
+  year		= {2011},
+  pages		= {viii+119},
+  isbn		= {978-3-642-16631-0},
+  mrclass	= {92D25 (60J25 60J68 60J70 60K35 92D10)},
+  mrnumber	= {2759587},
+  doi		= {10.1007/978-3-642-16632-7},
+  url		= {https://doi.org/10.1007/978-3-642-16632-7}
 }
 
 @Article{	  ethier.khoshnevisan:02:bounds,
@@ -38717,6 +38736,23 @@
 
 @Article{	  nourdin.peccati:09:steins,
   author	= {Nourdin, Ivan and Peccati, Giovanni},
+  title		= {Stein's method on {W}iener chaos},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {145},
+  year		= {2009},
+  number	= {1-2},
+  pages		= {75--118},
+  issn		= {0178-8051},
+  mrclass	= {60F05 (60G05 60H07)},
+  mrnumber	= {2520122},
+  mrreviewer	= {Anthony R\'{e}veillac},
+  doi		= {10.1007/s00440-008-0162-x},
+  url		= {https://doi.org/10.1007/s00440-008-0162-x}
+}
+
+@Article{	  nourdin.peccati:09:steins*1,
+  author	= {Nourdin, Ivan and Peccati, Giovanni},
   title		= {Stein's method and exact {B}erry-{E}sseen asymptotics for
 		  functionals of {G}aussian fields},
   journal	= {Ann. Probab.},
@@ -38731,23 +38767,6 @@
   mrreviewer	= {Jean-Pierre Fouque},
   doi		= {10.1214/09-AOP461},
   url		= {https://doi.org/10.1214/09-AOP461}
-}
-
-@Article{	  nourdin.peccati:09:steins*1,
-  author	= {Nourdin, Ivan and Peccati, Giovanni},
-  title		= {Stein's method on {W}iener chaos},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {145},
-  year		= {2009},
-  number	= {1-2},
-  pages		= {75--118},
-  issn		= {0178-8051},
-  mrclass	= {60F05 (60G05 60H07)},
-  mrnumber	= {2520122},
-  mrreviewer	= {Anthony R\'{e}veillac},
-  doi		= {10.1007/s00440-008-0162-x},
-  url		= {https://doi.org/10.1007/s00440-008-0162-x}
 }
 
 @Article{	  nourdin.peccati:10:cumulants,
